Bug 675587.  Change the location on hash changes even if we can't scroll right then.  r=jlebar