docshell/base/nsDocShell.cpp
@@ -9351,12 +9351,14 @@ nsDocShell::ScrollToAnchor(nsACString & aCurHash, nsACString & aNewHash,
         // position will be restored by the caller, based on positions
         // stored in session history.
         if (aLoadType == LOAD_HISTORY || aLoadType == LOAD_RELOAD_NORMAL)
-            return rv;
-        //An empty anchor. Scroll to the top of the page.
-        rv = SetCurScrollPosEx(0, 0);
+            return NS_OK;
+        // An empty anchor. Scroll to the top of the page.  Ignore the
+        // return value; failure to scroll here (e.g. if there is no
+        // root scrollframe) is not grounds for canceling the load!
+        SetCurScrollPosEx(0, 0);
     }
 
-    return rv;
+    return NS_OK;
 }
 
 void
